# mtg_processing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Deckbox-extras.csv  Deckbox-specials.csv  Makefile  Pipfile  __main__.py  proces.py  pyproject.toml  requirements.txt  setup.py  sort-extras.sh  util.py  wants.csv  wishlist.py
decks/: Azorius Aggro.csv  Cards on Hold.csv
