[tool.poetry]
name = "mtg_processing"
version = "0.0.1"
description = "Quick and Dirty MTG processing"
authors = [
    "Philippe M. Chiasson <gozer@ectoplasm.org>"
]
license = "MPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
bonobo = "^0.6"
cachecontrol = "^0.12"
lockfile = "^0.12"
bonobo-sqlalchemy = "^0.6"
PyMySQL = "^0.9.3"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "^3.7"
pytest-bdd = "^3.2"
selenium = "^3.141"
pre-commit = "^1.18"
autopep8="^1.4.4"
detect-secrets = "^0.12.5"
codecov = "^2.0"
pytest = "^5.1"
pytest-cov = "^2.7"
mccabe = "^0.6.1"
webtest = "^2.0"

[tool.black]
line-length = 78
skip-string-normalization = true
